--- a/eHarvest A Mobile Responsive Web Application for Agricultural Crops with SMS Notification/.env
+++ b/eHarvest A Mobile Responsive Web Application for Agricultural Crops with SMS Notification/.env
@@ -23,14 +23,14 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_DRIVER=smtp
+MAIL_DRIVER=
 MAIL_HOST=smtp.gmail.com
-MAIL_PORT=587
-MAIL_USERNAME=justingraig.manigo15@gmail.com
-MAIL_PASSWORD="kijpldzsyjpifaqh"
-MAIL_ENCRYPTION=tls
-MAIL_FROM_NAME="eHarvest Admin"
-MAIL_ADDRESS=justingraig.manigo15@gmail.com
+MAIL_PORT=
+MAIL_USERNAME=
+MAIL_PASSWORD=
+MAIL_ENCRYPTION=
+MAIL_FROM_NAME=
+MAIL_ADDRESS=
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
